# MangroveAI-SDK

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: add-issues-to-project.yml  contract-ci.yml  release.yml
examples/: ai_copilot_quickstart.py  defi_pro.py  execution_bulk_quickstart.py  on_chain_nansen.py  onchain_signals_demo.py  oracle_experiments_quickstart.py  oracle_full_surface_quickstart.py  oracle_quickstart.py  quickstart.py
scripts/: e2e_on_chain_test.py  regen_trading_defaults_fixture.sh
src/mangrove_ai/: __init__.py  _client.py  _config.py  _constants.py  _pagination.py  exceptions.py
src/mangrove_ai/_services/: ai_copilot.py  backtesting.py  config.py  defi.py  execution.py  on_chain.py  oracle.py  signals.py  social.py  strategies.py  users.py
src/mangrove_ai/_transport/: __init__.py  _auth.py  _http.py  _protocol.py  _retry.py
src/mangrove_ai/models/: __init__.py  ai_copilot.py  auth.py  backtesting.py  defi.py  docs.py  execution.py  kb.py  on_chain.py  oracle.py  shared.py  social.py  strategies.py  users.py
src/mangroveai/: __init__.py  _client.py
tests/: conftest.py  test_ai_copilot.py  test_auth.py  test_backtesting.py  test_backtesting_cooldown.py  test_backtesting_relaxed_fields.py  test_backtesting_strategy_id.py  test_config.py  test_crypto_assets.py  test_defi.py  test_docs.py  test_env_loading.py  test_execution.py  test_on_chain.py  test_oracle.py  test_oracle_launch_retry.py  test_signals.py  test_strategies.py  test_users.py
tests/fixtures/: execution_defaults_response.json  trading_defaults_response.json
tests/integration/: test_live.py  test_oracle_live.py
tests/test_kb/: test_kb.py
(+29 files in other folders)
