[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mangroveai"
version = "0.1.0"
description = "Python SDK for the MangroveAI trading strategy platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Mangrove Technologies Inc."},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.22",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://mangrovedeveloper.ai"
Repository = "https://github.com/MangroveTechnologies/MangroveAI-SDK"
Documentation = "https://github.com/MangroveTechnologies/MangroveAI-SDK#readme"
Changelog = "https://github.com/MangroveTechnologies/MangroveAI-SDK/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mangroveai"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit a live server",
]

[tool.mypy]
python_version = "3.10"
strict = true
